[gd_scene load_steps=10 format=3 uid="uid://cu3i556pmly0g"]

[ext_resource type="Theme" uid="uid://cvnv7ywm5uieg" path="res://resources/themes/main_theme.tres" id="1_jprq3"]
[ext_resource type="Script" path="res://scenes/battle/abilityCard/ability_card.gd" id="2_120ae"]
[ext_resource type="Script" path="res://scenes/battle/abilityCard/cardState/card_state_machine.gd" id="3_p4naj"]
[ext_resource type="Script" path="res://scenes/battle/abilityCard/cardState/card_base_state.gd" id="4_m72bs"]
[ext_resource type="Script" path="res://scenes/battle/abilityCard/cardState/card_clicked_state.gd" id="5_s50b6"]
[ext_resource type="Script" path="res://scenes/battle/abilityCard/cardState/card_dragging_state.gd" id="6_6hi0l"]
[ext_resource type="Script" path="res://scenes/battle/abilityCard/cardState/card_aiming_state.gd" id="7_uu85g"]
[ext_resource type="Script" path="res://scenes/battle/abilityCard/cardState/card_released_state.gd" id="8_3bext"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g6es7"]
size = Vector2(40, 50)

[node name="AbilityCard" type="Control"]
custom_minimum_size = Vector2(40, 50)
layout_mode = 3
anchors_preset = 0
offset_right = 30.0
offset_bottom = 40.0
theme = ExtResource("1_jprq3")
script = ExtResource("2_120ae")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(40, 50)
layout_mode = 0
offset_right = 30.0
offset_bottom = 40.0
mouse_filter = 2
mouse_default_cursor_shape = 2
color = Color(0.294118, 0.462745, 0.560784, 1)

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ColorRect/CenterContainer"]
layout_mode = 2
text = "Card"

[node name="DropPointSelector" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropPointSelector"]
position = Vector2(20, 25)
shape = SubResource("RectangleShape2D_g6es7")

[node name="CardStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_p4naj")
initial_state = NodePath("CardBaseState")

[node name="CardBaseState" type="Node" parent="CardStateMachine"]
script = ExtResource("4_m72bs")

[node name="CardClickedState" type="Node" parent="CardStateMachine"]
script = ExtResource("5_s50b6")
state = 1

[node name="CardDraggigState" type="Node" parent="CardStateMachine"]
script = ExtResource("6_6hi0l")
state = 2

[node name="CardAimingState" type="Node" parent="CardStateMachine"]
script = ExtResource("7_uu85g")
state = 3

[node name="CardReleasedState" type="Node" parent="CardStateMachine"]
script = ExtResource("8_3bext")
state = 4

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="area_entered" from="DropPointSelector" to="." method="_on_drop_point_selector_area_entered"]
[connection signal="area_exited" from="DropPointSelector" to="." method="_on_drop_point_selector_area_exited"]
